CLUB-246 to prod

--- a/scramble.html
+++ b/scramble.html
@@ -24,11 +24,11 @@
 
 <body>
     <div id="phaser-example"></div>
-    <script src="/JsComposer.php?file=yandex1.0.1.1/main.js&lang=en"></script>
+    <script src="/JsComposer.php?file=yandex1.0.1.1/main.js&lang=EN"></script>
     <div id="ss" style="display:none;"></div>
 
 
-<a href="/dict/?lng=EN" target="_blank" title="Перейти в словарь">Англо-русский словарь Эрудита</a>    
+<a href="/dict/?lang=EN" target="_blank" title="Перейти в словарь">Англо-русский словарь Эрудита</a>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
