--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
-    <title>Эрудит.club - онлайн тусовка любителей игры</title>
+    <title>Эрудит.club - онлайн сообщество любителей игры</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap_4.5.2/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/choose_css.css">
@@ -17,6 +17,8 @@
           content="Эрудит — настольная игра со словами, в которую могут играть от 2 до 4 человек, выкладывая слова из имеющихся у них букв в поле размером 15x15 квадратов.">
     <meta property="og:image" content="https://xn--d1aiwkc2d.club/img/share/hor_640_360.png">
 
+    <meta name="description" content="Эрудит — настольная игра со словами, в которую могут играть от 2 до 4 человек, выкладывая слова из имеющихся у них букв в поле размером 15x15 квадратов" />
+    
     <script src="vendor/phaser_35/phaser.min.js"></script>
 
     <!-- JS dependencies -->
@@ -47,8 +49,9 @@
 </script>
 <div id="ss" style="display:none;"></div>
 
-
-<a href="/dict/" target="_blank" title="Перейти в словарь">Словарь Эрудита</a>
+<div style="position:absolute; left:-9999px;">
+<a style="position:absolute; left:-9999px;" href="/dict/" target="_blank" title="Перейти в словарь">Словарь Эрудита</a>
+</div>
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
