--- a/scramble.html
+++ b/scramble.html
@@ -7,7 +7,43 @@
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap_4.5.2/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/choose_css.php">
     <link rel="stylesheet" type="text/css" href="css/knopki.css">
-    
+    <link rel="stylesheet" type="text/css" href="css/tg_app_tuning.css">
+
+    <script>
+        function sessionStorageSet(key, value) {
+            try {
+                window.sessionStorage.setItem('__telegram__' + key, JSON.stringify(value));
+                return true;
+            } catch (e) {}
+            return false;
+        }
+
+        function sessionStorageGet(key) {
+            try {
+                return JSON.parse(window.sessionStorage.getItem('__telegram__' + key));
+            } catch (e) {}
+            return null;
+        }
+
+        var appTgVersion = 7.7;
+
+        var initParams = sessionStorageGet('initParams');
+        if (initParams) {
+            if (!initParams.tgWebAppVersion) {
+                initParams.tgWebAppVersion = appTgVersion;
+            }
+        } else {
+            initParams = {
+                tgWebAppVersion: appTgVersion
+            };
+        }
+
+        sessionStorageSet('initParams', initParams);
+    </script>
+
+    <!-- TG web -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
     <script src="vendor/phaser_3/phaser.min.js"></script>
     
     <!-- JS dependencies -->
@@ -26,6 +62,12 @@
     <div id="phaser-example"></div>
 
     <script>
+        var TG = window.Telegram.WebApp;
+        TG.expand();
+        TG.disableVerticalSwipes();
+    </script>
+
+    <script>
         var loader = loader || {}
         loader.importJS = function (uri) {
             let script = document.createElement('script');
@@ -35,7 +77,7 @@
             head.appendChild(script);
         }
 
-        loader.importJS('https://xn--d1aiwkc2d.club/scrabble1.0.1.6/main.js?ver=' + Math.floor(Date.now() / (24 * 60 * 60)));
+        loader.importJS('https://xn--d1aiwkc2d.club/scrabble1.0.1.6/main.js?ver=' + Math.floor(Date.now()));
     </script>
 
     <div id="ss" style="display:none;"></div>
