CLUB-353-in-progress kill domain where its possible

--- a/scramble.html
+++ b/scramble.html
@@ -77,10 +77,12 @@
             head.appendChild(script);
         }
 
-        loader.importJS('https://xn--d1aiwkc2d.club/scrabble1.0.1.6/main.js?ver=' + Math.floor(Date.now()));
+        loader.importJS('/scrabble1.0.1.6/main.js?ver=' + Math.floor(Date.now()));
     </script>
 
-    <div id="ss" style="display:none;"></div>
+    <div id="ss" style="display:none;">
+        <a href="https://t.me/share/url?url=some.site" target="_blank" id="invite_link"></a>
+    </div>
 
 <!--<a href="/dict/?lang=EN" target="_blank" title="Go to dictionary">Scrabble dictionary</a>-->
 <!-- Yandex.Metrika counter -->
