СДГИ-353-in-progress очкии гроков

--- a/scramble.html
+++ b/scramble.html
@@ -65,6 +65,8 @@
         var TG = window.Telegram.WebApp;
         TG.expand();
         TG.disableVerticalSwipes();
+
+        var WebView = window.Telegram.WebView;
     </script>
 
     <script>
