--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Эрудит.club - онлайн сообщество любителей игры</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="vendor/bootstrap_4.5.2/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="static/bootstrap_4.5.2/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/choose_css.css">
     <link rel="stylesheet" type="text/css" href="css/knopki.css">
 
@@ -19,17 +19,17 @@
 
     <meta name="description" content="Эрудит — настольная игра со словами, в которую могут играть от 2 до 4 человек, выкладывая слова из имеющихся у них букв в поле размером 15x15 квадратов" />
     
-    <script src="vendor/phaser_35/phaser.min.js"></script>
+    <script src="static/phaser_35/phaser.min.js"></script>
 
     <!-- JS dependencies -->
-    <script src="vendor/jquery_1.12.4/jquery.min.js"></script>
+    <script src="static/jquery_1.12.4/jquery.min.js"></script>
     <!-- Bootstrap 4 dependency -->
-    <script src="vendor/popper_2.4.4/popper.min.js"></script>
-    <script src="vendor/bootstrap_4.5.2/bootstrap.min.js"></script>
+    <script src="static/popper_2.4.4/popper.min.js"></script>
+    <script src="static/bootstrap_4.5.2/bootstrap.min.js"></script>
 
     <!-- bootbox code -->
-    <script src="vendor/bootbox_5.4.0/bootbox.min.js"></script>
-    <script src="vendor/bootbox_5.4.0/bootbox.locales.min.js"></script>
+    <script src="static/bootbox_5.4.0/bootbox.min.js"></script>
+    <script src="static/bootbox_5.4.0/bootbox.locales.min.js"></script>
 
 </head>
 
@@ -45,7 +45,7 @@
         head.appendChild(script);
     }
 
-    loader.importJS('/yandex1.0.1.1/main.js?ver=' + Math.floor(Date.now() / (24 * 60 * 60)));
+    loader.importJS('/yandex1.0.1.1/main.js?ver=' + Date.now());
 </script>
 <div id="ss" style="display:none;"></div>
 
