--- a/scramble.html
+++ b/scramble.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Scrabble online for rating and earnings</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="vendor/bootstrap_4.5.2/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="static/bootstrap_4.5.2/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/choose_css.php">
     <link rel="stylesheet" type="text/css" href="css/knopki.css">
     <link rel="stylesheet" type="text/css" href="css/tg_app_tuning.css">
@@ -44,17 +44,17 @@
     <!-- TG web -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
-    <script src="vendor/phaser_3/phaser.min.js"></script>
+    <script src="static/phaser_3/phaser.min.js"></script>
     
     <!-- JS dependencies -->
-    <script src="vendor/jquery_1.12.4/jquery.min.js"></script>
+    <script src="static/jquery_1.12.4/jquery.min.js"></script>
     <!-- Bootstrap 4 dependency -->
-    <script src="vendor/popper_2.4.4/popper.min.js"></script>
-    <script src="vendor/bootstrap_4.5.2/bootstrap.min.js"></script>
+    <script src="static/popper_2.4.4/popper.min.js"></script>
+    <script src="static/bootstrap_4.5.2/bootstrap.min.js"></script>
 
     <!-- bootbox code -->
-    <script src="vendor/bootbox_5.4.0/bootbox.min.js"></script>
-    <script src="vendor/bootbox_5.4.0/bootbox.locales.min.js"></script>
+    <script src="static/bootbox_5.4.0/bootbox.min.js"></script>
+    <script src="static/bootbox_5.4.0/bootbox.locales.min.js"></script>
     
 </head>
 
