--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:locale" content="ru_RU">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Эрудит.club - онлайн тусовка любителей игры">
+    <meta property="og:title" content="Эрудит.club - онлайн сообщество любителей игры">
     <meta property="og:site_name" content="Эрудит.Club">
     <meta property="og:url" content="https://xn--d1aiwkc2d.club/">
     <meta property="og:description"
