--- a/local.html
+++ b/local.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Эрудит.club - онлайн тусовка любителей игры</title>
+    <title>Эрудит.club - онлайн сообщество любителей игры</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="static/bootstrap_4.5.2/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/choose_css.css">
@@ -10,7 +10,7 @@
 	
     <meta property="og:locale" content="ru_RU">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Эрудит.club - онлайн тусовка любителей игры">
+    <meta property="og:title" content="Эрудит.club - онлайн сообщество любителей игры">
     <meta property="og:site_name" content="Эрудит.Club">
     <meta property="og:url" content="https://xn--d1aiwkc2d.club/">
     <meta property="og:description" content="Эрудит — настольная игра со словами, в которую могут играть от 2 до 4 человек, выкладывая слова из имеющихся у них букв в поле размером 15x15 квадратов.">
