--- a/yandex.html
+++ b/yandex.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Эрудит.club - онлайн тусовка любителей игры</title>
+    <title>Эрудит.club - онлайн сообщество любителей игры</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="static/bootstrap_4.5.2/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/choose_css.css">
