--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="static/bootstrap_4.5.2/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/choose_css.css">
     <link rel="stylesheet" type="text/css" href="css/knopki.css">
+    <link rel="stylesheet" type="text/css" href="css/tg_app_tuning.css">
 
     <meta property="og:locale" content="ru_RU">
     <meta property="og:type" content="website">
@@ -18,8 +19,11 @@
     <meta property="og:image" content="https://xn--d1aiwkc2d.club/img/share/hor_640_360.png">
 
     <meta name="description" content="Эрудит — настольная игра со словами, в которую могут играть от 2 до 4 человек, выкладывая слова из имеющихся у них букв в поле размером 15x15 квадратов" />
-    
-    <script src="static/phaser_35/phaser.min.js"></script>
+
+    <!-- TG web -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
+    <script src="static/phaser_3/phaser.min.js"></script>
 
     <!-- JS dependencies -->
     <script src="static/jquery_1.12.4/jquery.min.js"></script>
@@ -50,8 +54,9 @@
 <div id="ss" style="display:none;"></div>
 
 <div style="position:absolute; left:-9999px;">
-<a style="position:absolute; left:-9999px;" href="/dict/" target="_blank" title="Перейти в словарь">Словарь Эрудита</a>
+<a style="position:absolute; left:-9999px;" href="/dict/?lang=EN" target="_blank" title="Go to dictionary">Scrabble dictionary</a>
 </div>
+
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
