CLUB-353 after release. fix bugs 5 -tg-web-app.js moved locally

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="description" content="Эрудит — настольная игра со словами, в которую могут играть от 2 до 4 человек, выкладывая слова из имеющихся у них букв в поле размером 15x15 квадратов" />
 
     <!-- TG web -->
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="public/js/telegram-web-app.js"></script>
 
     <script src="static/phaser_3/phaser.min.js"></script>
 
