--- a/scramble.html
+++ b/scramble.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/tg_app_tuning.css">
 
     <!-- TG web -->
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="public/js/telegram-web-app.js"></script>
 
     <script src="static/phaser_3/phaser.min.js"></script>
     
