CLUB-388 верстка ок

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Эрудит.club - онлайн сообщество любителей игры</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="static/bootstrap_4.5.2/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/choose_css.css">
+    <link rel="stylesheet" type="text/css" href="css/choose_css_new.css">
     <link rel="stylesheet" type="text/css" href="css/knopki.css">
     <link rel="stylesheet" type="text/css" href="css/tg_app_tuning.css">
 
