--- a/dev.html
+++ b/dev.html
@@ -5,7 +5,7 @@
     <title>Эрудит.club - онлайн сообщество любителей игры</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="static/bootstrap_4.5.2/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/choose_css.css">
+    <link rel="stylesheet" type="text/css" href="css/choose_css_new.css">
     <link rel="stylesheet" type="text/css" href="css/knopki.css">
 	
     <meta property="og:locale" content="ru_RU">
@@ -32,9 +32,21 @@
 
 <body>
     <div id="phaser-example"></div>
-    <script src="dev1.0.1.2/main.js"></script>
-    <div id="ss" style="display:none;"></div>
 
+    <script>
+        var loader = loader || {}
+        loader.importJS = function (uri) {
+            let script = document.createElement('script');
+            let head = document.getElementsByTagName('head')[0];
+            script.type = 'text/javascript';
+            script.src = uri;
+            head.appendChild(script);
+        }
+
+        loader.importJS('/dev1.0.1.2/main.js?ver=' + Math.floor(Date.now()));
+    </script>
+
+    <div id="ss" style="display:none;"></div>
 
     <a href="/dict/" target="_blank" title="Перейти в словарь">Словарь Эрудита</a>
 <!-- Yandex.Metrika counter -->
