--- a/scramble.html
+++ b/scramble.html
@@ -5,7 +5,7 @@
     <title>Scrabble online for rating and earnings</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="static/bootstrap_4.5.2/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/choose_css.php">
+    <link rel="stylesheet" type="text/css" href="css/choose_css_new.css">
     <link rel="stylesheet" type="text/css" href="css/knopki.css">
     <link rel="stylesheet" type="text/css" href="css/tg_app_tuning.css">
 
@@ -23,7 +23,6 @@
     <!-- bootbox code -->
     <script src="static/bootbox_5.4.0/bootbox.min.js"></script>
     <script src="static/bootbox_5.4.0/bootbox.locales.min.js"></script>
-    
 </head>
 
 <body>
