CLUB-383 проблемы с версткой в телеграме.

--- a/profile-modal-tpl.html
+++ b/profile-modal-tpl.html
@@ -51,7 +51,7 @@
 					</div>
 				</div>
 				<div class="box mb-0">
-					<span class="nickname d-block mb-1">{{name}}</span>
+					<span class="nickname d-block mb-1" id="playersNikname">{{name}}</span>
 					<div class="d-flex">
 						<div class="flex-eq"></div>
 						<div class="nickname-inpit-wrap">
