CLUB-383 поправил высоту бутбокса. остались проблемы с версткой в телеграм-десктоп.

--- a/scramble.html
+++ b/scramble.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="static/bootstrap_4.5.2/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/choose_css_new2.css">
     <link rel="stylesheet" type="text/css" href="css/knopki.css">
-    <link rel="stylesheet" type="text/css" href="css/tg_app_tuning.css">
+    <link rel="stylesheet" type="text/css" href="css/tg_app_tuning.css?ver=2">
 
     <!-- TG web -->
     <script src="public/js/telegram-web-app.js"></script>
