--- a/scramble.html
+++ b/scramble.html
@@ -5,7 +5,7 @@
     <title>Scrabble online for rating and earnings</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="static/bootstrap_4.5.2/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/choose_css_new3.css">
+    <link rel="stylesheet" type="text/css" href="css/choose_css_new4.css">
     <link rel="stylesheet" type="text/css" href="css/knopki.css">
     <link rel="stylesheet" type="text/css" href="css/tg_app_tuning.css?ver=2">
 
@@ -38,7 +38,7 @@
             head.appendChild(script);
         }
 
-        loader.importJS('/scrabble1.0.1.6/main.js?ver=' + Math.floor(Date.now()));
+        loader.importJS('/scrabble1.0.1.6/main.js'/* + '?ver=' + Math.floor(Date.now())*/);
     </script>
 
     <div id="ss" style="display:none;">
