CLUB-402 добавил окошко возврата в полноэкранный режим для webview

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body>
+<body style="overscroll-behavior-y: none;">
 <div id="phaser-example"></div>
 <script>
     var loader = loader || {}
